# panel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  panel.xml
src/: ContextElement.cpp  ContextElement.h  ContextFactory.cpp  ContextFactory.h  Panel.cpp  Panel.h  main.cpp
